feat: keep minimal working code

--- a/firebase-auth/core/build.gradle
+++ b/firebase-auth/core/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 dependencies {
-    api project(':firebase-auth')
+//    api project(':firebase-auth')
 
     implementation "androidx.lifecycle:lifecycle-service:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
