--- a/play-services-core/build.gradle
+++ b/play-services-core/build.gradle
@@ -18,45 +18,45 @@ dependencies {
     implementation "com.squareup.wire:wire-runtime:$wireVersion"
     implementation "de.hdodenhof:circleimageview:1.3.0"
 
-    implementation project(':firebase-dynamic-links-api')
-    implementation project(':firebase-auth-core')
+//    implementation project(':firebase-dynamic-links-api')
+//    implementation project(':firebase-auth-core')
     implementation project(':play-services-base-core')
-    implementation project(':play-services-cast-core')
-    implementation project(':play-services-cast-framework-core')
+//    implementation project(':play-services-cast-core')
+//    implementation project(':play-services-cast-framework-core')
     implementation project(':play-services-conscrypt-provider-core')
     implementation project(':play-services-cronet-core')
-    implementation project(':play-services-droidguard-core')
-    implementation project(':play-services-fido-core')
-    implementation project(':play-services-gmscompliance-core')
-    implementation project(':play-services-location-core')
-    withNearbyImplementation project(':play-services-nearby-core')
-    implementation project(':play-services-oss-licenses-core')
-    implementation project(':play-services-pay-core')
-    implementation project(':play-services-recaptcha-core')
-    implementation project(':play-services-safetynet-core')
-    implementation project(':play-services-tapandpay-core')
-    implementation project(':play-services-vision-core')
-    implementation project(':play-services-wearable-core')
+//    implementation project(':play-services-droidguard-core')
+//    implementation project(':play-services-fido-core')
+//    implementation project(':play-services-gmscompliance-core')
+//    implementation project(':play-services-location-core')
+//    withNearbyImplementation project(':play-services-nearby-core')
+//    implementation project(':play-services-oss-licenses-core')
+//    implementation project(':play-services-pay-core')
+//    implementation project(':play-services-recaptcha-core')
+//    implementation project(':play-services-safetynet-core')
+//    implementation project(':play-services-tapandpay-core')
+//    implementation project(':play-services-vision-core')
+//    implementation project(':play-services-wearable-core')
 
     implementation project(':play-services-core-proto')
 
     implementation project(':play-services-core:microg-ui-tools') // deprecated
     implementation project(':play-services-api')
 
-    implementation project(':play-services-appinvite')
+//    implementation project(':play-services-appinvite')
     implementation project(':play-services-auth-base')
     implementation project(':play-services-auth')
-    implementation project(':play-services-clearcut')
-    implementation project(':play-services-drive')
-    implementation project(':play-services-maps')
-    implementation project(':play-services-measurement-base')
-    implementation project(':play-services-places')
-    implementation project(':play-services-recaptcha')
-    implementation project(':play-services-safetynet')
+//    implementation project(':play-services-clearcut')
+//    implementation project(':play-services-drive')
+//    implementation project(':play-services-maps')
+//    implementation project(':play-services-measurement-base')
+//    implementation project(':play-services-places')
+//    implementation project(':play-services-recaptcha')
+//    implementation project(':play-services-safetynet')
     implementation project(':play-services-tasks-ktx')
 
-    withMapboxImplementation project(':play-services-maps-core-mapbox')
-    withVtmImplementation project(':play-services-maps-core-vtm')
+//    withMapboxImplementation project(':play-services-maps-core-mapbox')
+//    withVtmImplementation project(':play-services-maps-core-vtm')
 
     // AndroidX UI
     implementation "androidx.multidex:multidex:$multidexVersion"
@@ -101,7 +101,7 @@ android {
         buildConfigField "String", "RECAPTCHA_ENTERPRISE_API_KEY", "\"${localProperties.get("recaptchaEnterpreise.apiKey", "")}\""
 
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            abiFilters "arm64-v8a"
         }
 
         buildConfigField "String", "APPLICATION_NAMESPACE", "\"${android.namespace}\""
