--- a/play-services-maps-core-mapbox/build.gradle
+++ b/play-services-maps-core-mapbox/build.gradle
@@ -18,9 +18,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 dependencies {
-    implementation project(':play-services-maps')
+//    implementation project(':play-services-maps')
     implementation project(':play-services-base-core')
-    implementation project(':play-services-location')
+//    implementation project(':play-services-location')
     implementation("org.maplibre.gl:android-sdk:10.0.0")
     implementation("org.maplibre.gl:android-plugin-annotation-v9:1.0.0") {
         exclude group: 'com.google.android.gms'
@@ -50,7 +50,7 @@ android {
         buildConfigField "String", "MAPBOX_KEY", "\"${localProperties.getProperty("mapbox.key", System.getenv('MAPBOX_VECTOR_TILES_KEY') ?: "")}\""
 
         ndk {
-            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            abiFilters "arm64-v8a"
         }
     }
 
