--- a/play-services/build.gradle
+++ b/play-services/build.gradle
@@ -38,8 +38,8 @@ android {
 
 dependencies {
     api project(':play-services-base')
-    api project(':play-services-cast')
-    api project(':play-services-gcm')
-    api project(':play-services-location')
-    api project(':play-services-wearable')
+//    api project(':play-services-cast')
+//    api project(':play-services-gcm')
+//    api project(':play-services-location')
+//    api project(':play-services-wearable')
 }
