--- a/play-services-core/src/main/AndroidManifest.xml
+++ b/play-services-core/src/main/AndroidManifest.xml
@@ -90,8 +90,8 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
 
 <!--    <uses-permission android:name="${basePackageName}.android.c2dm.permission.RECEIVE" />-->
 <!--    <uses-permission android:name="${basePackageName}.android.c2dm.permission.SEND" />-->
@@ -191,36 +191,36 @@
 
         <!-- Device Checkin -->
 
-        <service android:name="org.microg.gms.checkin.CheckinService">
-            <intent-filter>
-                <action android:name="com.google.android.gms.checkin.BIND_TO_SERVICE" />
-            </intent-filter>
-        </service>
+<!--        <service android:name="org.microg.gms.checkin.CheckinService">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.google.android.gms.checkin.BIND_TO_SERVICE" />-->
+<!--            </intent-filter>-->
+<!--        </service>-->
 
-        <receiver android:name="org.microg.gms.checkin.TriggerReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.AIRPLANE_MODE" />
+<!--        <receiver android:name="org.microg.gms.checkin.TriggerReceiver">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.BOOT_COMPLETED" />-->
+<!--                <action android:name="android.intent.action.AIRPLANE_MODE" />-->
 
-                <action android:name="android.server.checkin.CHECKIN" />
+<!--                <action android:name="android.server.checkin.CHECKIN" />-->
 
-                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
-                <action android:name="android.intent.action.PACKAGE_RESTARTED" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="${basePackageName}.android.c2dm.intent.RECEIVE" />
+<!--                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />-->
+<!--                <action android:name="android.intent.action.PACKAGE_RESTARTED" />-->
+<!--            </intent-filter>-->
+<!--            <intent-filter>-->
+<!--                <action android:name="${basePackageName}.android.c2dm.intent.RECEIVE" />-->
 
-                <category android:name="android.server.checkin.CHECKIN" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.provider.Telephony.SECRET_CODE" />
+<!--                <category android:name="android.server.checkin.CHECKIN" />-->
+<!--            </intent-filter>-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.provider.Telephony.SECRET_CODE" />-->
 
-                <!-- *#*#MGCHECKIN#*#* -->
-                <data
-                    android:host="642432546"
-                    android:scheme="android_secret_code" />
-            </intent-filter>
-        </receiver>
+<!--                &lt;!&ndash; *#*#MGCHECKIN#*#* &ndash;&gt;-->
+<!--                <data-->
+<!--                    android:host="642432546"-->
+<!--                    android:scheme="android_secret_code" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
 
         <!-- Cloud Messaging -->
 <!--        <service-->
